--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: g.jiayi666@gmail.com
 description: "AI is gona change our world!"
 keyword: "Artificial Intelegence, Machine Learning, 刘嘉懿, Jiayi666"
 url: "http://Jiayi666.github.io"              # your host, for absolute URL
-baseurl: "Jiayi666.github.io"                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
