--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     撼岳生
-zhihu_username:     刘嘉懿
+zhihu_username:     jiayi666
 github_username:    Jiayi666
 #twitter_username:  huxpro
 facebook_username:  刘嘉懿
