--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
+weibo_username:     撼岳生
 zhihu_username:     jiayi666
 github_username:    Jiayi666
 #twitter_username:  huxpro
