--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ weibo_username:     '5041353877'
 zhihu_username:     jiayi666
 github_username:    Jiayi666
 #twitter_username:  huxpro
-facebook_username:  刘嘉懿
+facebook_username:  jiayi666
 # linkedin_username:  firstname-lastname-idxxxx
 
 
